<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TheTest</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="string_signup">Sign up</string>
    <string name="string_username">Username</string>
    <string name="string_password">Password</string>
    <string name="string_email">Email</string>
    <string name="string_signup_button">SIGN UP</string>
    <string name="string_login_button_label">Login</string>
    <string name="string_action_logout">Logout</string>
    <string name="string_new_signup">Don\'t have Account Sign up!</string>
    <string name="action_caputre_label">Capture</string>
    <string name="string_getitems">GET</string>

</resources>
