<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    tools:context="com.aqibgatoo.thetest.ui.LoginActivity">

    <EditText
        android:layout_marginTop="60dp"
        android:id="@+id/id_username"
        android:hint="@string/string_username"
        android:inputType="textWebEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:hint="@string/string_password"
        android:id="@+id/id_password"
        android:layout_below="@+id/id_username"
        android:layout_width="match_parent"
        android:inputType="textWebPassword"
        android:layout_height="wrap_content" />

    <Button
        android:layout_below="@+id/id_password"
        android:id="@+id/id_login"
        android:text="@string/string_login_button_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:hint="@string/string_new_signup"
        android:layout_below="@+id/id_login"
        android:id="@+id/id_signup_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>
